2004-09-20  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/lily-parser.cc (get_paper): don't set parent for \paper
	blocks in the parser. This eliminates ordering dependency for
	\bookpaper and \paper

	* ly/part-paper-init.ly: remove file.

	* lily/includable-lexer.cc (new_input): elucidate message.

2004-09-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/mutopia/E.Satie/petite-ouverture-a-danser.ly: 
	* input/mutopia/R.Schumann/romanze-op28-2.ly:
	* input/mutopia/F.Schubert/standchen.ly: Remove obsolete
	#'Slur.attachment setting.

	* elisp/lilypond-mode.el (LilyPond-command-alist): Use -ftex,
	friendlier for point and click.

2004-09-19  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* ly/init.ly: reverse collected scores.

	* scm/page-layout.scm (ly:optimal-page-breaks): use non-ragged
	layout to determine force.
	
2004-09-18  Werner Lemberg  <wl@gnu.org>

	* ly/engraver-init.ly <Score> [quotedEventTypes]: Add tuplets and
	ties.

	* ly/declarations-init.ly (escapedBiggerSymbol,
	escapedSmallerSymbol): Fix typos.

	* scripts/convert-ly.py: s/removeTag/removeWithTag/.

2004-09-18  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* input/{input,regression}/*.ly: run convert-ly

	* VERSION: release 2.3.17

	* lily/slur-scoring.cc (enumerate_attachments): make stem_extent a
	little wider for attachment calculation. This prevents stem and
	slur touching.

	* lily/parser.yy (direction_less_char): soft code \< \> \! \( \) (
	) 

	* input/regression/tie.ly (texidoc): cleanup.

	* ly/declarations-init.ly (tildeSymbol): soft-code meaning of [ ]
	and ~

	* lily/slur-scoring.cc (score_extra_encompass): check if extra
	objects are on boundary column. 

	* lily/main.cc (parse_argv): process --tex too.

	* ly/music-functions-init.ly (keepWithTag): add music functions
	keepWithTag and removeWithTag.

	* lily/quote-iterator.cc (Quote_iterator): init transposed_musics_.

	* lily/accidental-engraver.cc (recent_enough): interpret laziness
	= #t. This fixes no-reset accidental-style.
