@@ -1,5 +1,8 @@
 2004-09-20  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
+	* lily/simple-spacer.cc (Module): use force to stretch to 
+	line length as force measure for ragged spacing.
+	
 	* lily/lily-parser.cc (get_paper): don't set parent for \paper
 	blocks in the parser. This eliminates ordering dependency for
 	\bookpaper and \paper
